manifests/httpd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rcook
  labels:
    name: rcook
