manifests/httpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: rcook
spec:
  selector:
    app: httpd
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
