manifests/httpd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-route
  namespace: rcook
spec:
  to:
    kind: Service
    name: httpd-service
  port:
    targetPort: 8080
